# interviews-data-science-assignment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  classify_employees.ipynb  data_cleaning.ipynb  data_exploration.ipynb  docker-compose.yaml  loyal_employees.ipynb  pyproject.toml  requirements.txt  server.py
churn_classifier/: classification_evaluation.py  data_cleaning.py  inference.py  train.py  utils.py
churn_classifier/dataset/: README.md  __init__.py
notebooks/: classify_employees.ipynb  data_exploration.ipynb  loyal_employees.ipynb
src/: classification_evaluation.py  data_cleaning.py
tests/: inference_test.py  package_test.py  train_test.py
